plugins {
    id "com.android.application"
    id "kotlin-android"
    id "kotlinx-serialization"
    id "org.jetbrains.kotlin.android"
    id "com.google.devtools.ksp"
}

android {
    namespace "com.mrboomdev.awery"
    compileSdk 34

    defaultConfig {
        applicationId "com.mrboomdev.awery"
        minSdk 24
        targetSdk 34
        versionName "1.0.1"

        /* We want to make sure that all build versions across the planet will be in sync */
        var timezone = TimeZone.getTimeZone("UTC")
        var calendarCurrent = Calendar.getInstance(timezone)

        /* Just a random date to begin with */
        var calendarBegin = Calendar.getInstance(timezone)
        calendarBegin.set(2024, 2, 4)

        /* Only one version can be published per hour or else horrible things will happen */
        var newVersionCodeTimeout = 60 * 60 * 1000
        versionCode (((calendarCurrent.timeInMillis - calendarBegin.timeInMillis) / newVersionCodeTimeout) as int)

        resourceConfigurations.addAll(["en", "ru"])

        javaCompileOptions {
            annotationProcessorOptions {
                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
            }
        }
    }

    sourceSets {
        main.assets.srcDirs += files("$projectDir/schemas".toString())
    }

    buildTypes {
        debug {
            applicationIdSuffix ".beta"
            versionNameSuffix "-beta"
            debuggable true
            minifyEnabled false
        }

        release {
            debuggable false
            minifyEnabled false
            versionNameSuffix "-release"
            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
            signingConfig signingConfigs.debug
        }
    }

    buildFeatures {
        viewBinding true
    }

    compileOptions {
        coreLibraryDesugaringEnabled true
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    kotlinOptions {
        jvmTarget = "17"
        freeCompilerArgs = ["-Xcontext-receivers", "-Xmulti-platform"]
    }
}

dependencies {
    // Compatibility for new methods in old Api
    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:2.0.4"
    implementation "androidx.core:core-ktx:1.12.0"
    implementation "androidx.work:work-runtime-ktx:2.9.0"
    implementation "androidx.appcompat:appcompat:1.6.1"
    implementation "androidx.browser:browser:1.8.0"
    implementation "androidx.webkit:webkit:1.10.0"
    implementation "androidx.fragment:fragment-ktx:1.6.2"
    implementation "androidx.preference:preference-ktx:1.2.1"

    // Kotlin shit
    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.2"

    // Glide
    ext.glide_version = "4.16.0"
    api "com.github.bumptech.glide:glide:$glide_version"
    ksp "com.github.bumptech.glide:ksp:$glide_version"
    implementation "com.github.bumptech.glide:glide:$glide_version"
    implementation "com.github.bumptech.glide:okhttp3-integration:$glide_version"
    implementation "jp.wasabeef:glide-transformations:4.3.0"

    // Exoplayer
    ext.exo_version = "1.3.0"
    implementation "androidx.media3:media3-exoplayer:$exo_version"
    implementation "androidx.media3:media3-ui:$exo_version"
    implementation "androidx.media3:media3-exoplayer-hls:$exo_version"
    implementation "androidx.media3:media3-exoplayer-dash:$exo_version"
    implementation "androidx.media3:media3-datasource-okhttp:$exo_version"
    implementation "androidx.media3:media3-session:$exo_version"

    // Database
    def room_version = "2.6.1"
    implementation "androidx.room:room-runtime:$room_version"
    annotationProcessor "androidx.room:room-compiler:$room_version"

    // UI
    implementation "androidx.recyclerview:recyclerview:1.3.2"
    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
    implementation "com.google.android.material:material:1.11.0"
    implementation "nl.joery.animatedbottombar:library:1.1.0"
    implementation "io.noties.markwon:core:4.6.2"
    implementation "com.flaviofaria:kenburnsview:1.0.7"
    implementation "com.davemorrissey.labs:subsampling-scale-image-view-androidx:3.10.0"
    implementation "com.alexvasilkov:gesture-views:2.8.3"
    implementation "com.github.VipulOG:ebook-reader:0.1.6"
    implementation "androidx.paging:paging-runtime-ktx:3.2.1"
    implementation "com.github.skydoves:colorpickerview:2.3.0"
    implementation "androidx.core:core-splashscreen:1.0.1"
    implementation "androidx.leanback:leanback-tab:1.1.0-beta01"

    // Utils
    implementation "me.xdrop:fuzzywuzzy:1.4.0"
    implementation "com.squareup.moshi:moshi:1.15.0"
    implementation "com.google.code.gson:gson:2.10.1"
    implementation "com.github.Blatzar:NiceHttp:0.4.4"
    implementation "org.mozilla:rhino:1.7.14"

    // Aniyomi
    implementation "io.reactivex:rxjava:1.3.8"
    implementation "io.reactivex:rxandroid:1.2.1"
    implementation "ru.beryukhov:flowreactivenetwork:1.0.4"
    implementation "ca.gosyer:voyager-navigator:1.0.0-rc07"
    implementation "com.squareup.logcat:logcat:0.1"
    implementation "com.github.inorichi.injekt:injekt-core:65b0440"
    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.12"
    implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.12"
    implementation "com.squareup.okhttp3:okhttp-dnsoverhttps"
    implementation "com.squareup.okhttp3:okhttp-brotli:4.12.0"
    implementation "com.squareup.okio:okio:3.7.0"
    implementation "ch.acra:acra-http:5.11.3"
    implementation "org.jsoup:jsoup:1.15.4"
    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json-okio:1.6.2"
    implementation "com.jakewharton.rxrelay:rxrelay:1.2.0"
    implementation "com.github.tachiyomiorg:unifile:17bec43"
    implementation "com.github.gpanther:java-nat-sort:natural-comparator-1.1"
    implementation "androidx.preference:preference-ktx:1.2.1"
}